# Communication

./: .gitignore  CMakeLists.txt  README.md
config/: config.json
examples/: advanced_example.cc  simple_example.cc
inc/: Communication.h
src/: Communication.cc
test/0MQ/: pub_sub.cc  zmq_pub_sub.cc
